NXT-3387: Only use a single exception for command execution/und/redo
Because the FE doesn't distinguish those exceptions and hence, there is
no need on the BE to differentiate those, either.

NXT-3387 (Enable component drag'n'drop in browser w/o user feedback/input)